# BezierCurveSFML

./: CMakeLists.txt  README.md  main.cpp
include/core/: Application.hpp  Controller.hpp  Model.hpp
include/geometry/: BezierCurve.hpp  Point.hpp
include/visualization/: Visualizer.hpp
src/core/: Application.cpp  Controller.cpp  Model.cpp
src/geometry/: BezierCurve.cpp  Point.cpp
src/visualization/: Visualizer.cpp
